--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
-<div>
-  <a routerLink="home">Home</a>
-</div>
-<div>
-  <a routerLink="sobrenosotros">Sobre Nosotros</a>
-</div>
-<div>
-  <a routerLink="imagenes">Imagenes</a>
-</div>
-<div>
-  <a routerLink="donacion">Donación</a>
-</div>
-<router-outlet></router-outlet>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <img src="https://i.ibb.co/8g3T7mq/Banner-para-el-Canal.jpg" alt="Banner-para-el-Canal" class="img-fluid" alt="...">
+</body>
+</html>
+
