--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,23 @@
       </div>
     </div>
   </nav>
+
+  <nav class="navbar2 navbar-expand-lg navbar-light bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav2-link active" aria-current="page" routerLink="home"><span>Home</span></a>
+          <a class="nav2-link" routerLink="sobrenosotros"><span>Sobre Nosotros</span></a>
+          <a class="nav2-link" routerLink="imagenes"><span>Imagenes</span></a>
+          <a class="nav2-link" routerLink="donacion"><span>Donación</span></a>
+        </div>
+      </div>
+    </div>
+  </nav>
 </body>
 </html>
 <router-outlet></router-outlet>
