--- a/src/app/paginas/home/home.component.html
+++ b/src/app/paginas/home/home.component.html
@@ -1,2 +1,55 @@
-<p class="prueba">home workssss!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="https://i.ibb.co/fMHtMCr/Icono-2-0.png" class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Adictos al Código</h5>
+              <p class="card-text">Es una canal de youtube que enseña a los jovenes a programar desde 0 para desarrollar su habilidades y haciendo hincapié en la lógica de la programación.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="contenedor">
+          <h1>Introducción</h1>
+          <span class="contenedor__texto">
+            En mi canal de youtube aprenderas desde 0 comenzamos desde lo mas facil hasta <br> lo mas dificil 
+            Tenemos los siguientes cursos disponibles:
+          </span> 
+          <div class="contenedor__otrocontenedor">
+            <h4 class="contenedor__h4">
+                Curso de C++ desde 0 + Material + Ejercicios
+            </h4>
+            <span>Precio: $55</span> 
+            <h4 class="contenedor__h4">
+                Curso de Java desde 0 + Base de Datos + Ejercicios 
+            </h4>
+            <span>Precio: $65</span> 
+            <h4 class="contenedor__h4">
+                Curso de C# desde 0 + SQL SERVER + Regalo 
+            </h4>
+            <span>Precio: $100</span> 
+            <h4 class="contenedor__h4">
+                Curso de HTML + CSS + JAVASCRIPT + REGALO 
+            </h4>
+            <span>Precio: $45</span> 
+          </div>
+          <p class="contenedor__p">
+              Proximamente más cursos...
+          </p>
+      </div>
+</body>
+</html>
+
 
