Añadir elementos a la clase quien soy

--- a/src/app/paginas/sobrenosotros/sobrenosotros.component.html
+++ b/src/app/paginas/sobrenosotros/sobrenosotros.component.html
@@ -1,1 +1,53 @@
-<p>sobrenosotros works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div class="contenedor">
+        <h1 class="contenedor__h1">¿Quienes Soy?</h1>
+        <p class="contenedor__p">
+            Mi nombre es Jahir Alexander Celorio Malavé el cual será tu instructor en estos cursos que te brindo puedes confiar en mi la programación <br> la veo como un hobbit no más bien como un trabajo 
+            porque prepararte conmigo te ayudara a alcanzar tus espectativa soy especializado <br> en tecnologias Back-end y Fron-end no esperes a que te lo cuente y vive esta experiencia
+        </p>
+        <div class="card" style="width: 18rem;">
+            <img src="https://i.ibb.co/4mkwSxv/840-560.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Mark Zuckerberg</h5>
+              <p class="card-text">El curso de adictos al código es unos de los mejores me enseño a desbloquear mis habilidades de programación.</p>
+              <a href="#" class="btn btn-primary">Saber más</a>
+            </div>
+        </div>
+
+          <div class="card2" style="width: 18rem;">
+            <img src="https://i.ibb.co/ZHHf6dL/bill-gates-100-700x391.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Bill Gates</h5>
+              <p class="card-text">Gracias al curso Adictos al Código logré desarrollar mi pagina que es ahora de microsoft.</p>
+              <a href="#" class="btn btn-primary">Saber más</a>
+            </div>
+        </div>
+
+        <div class="card3" style="width: 18rem;">
+            <img src="https://i.ibb.co/5r0w0M2/626969507375d-r-1652160120119-0-20-1600-821.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Elon Musk</h5>
+              <p class="card-text">Estoy muy agradecido con Adictos al Código porque su enseñanza es de calidad pude hacer mi primera página de la nasa.</p>
+              <a href="#" class="btn btn-primary">Saber más</a>
+            </div>
+        </div>
+
+        <div class="card4" style="width: 18rem;">
+            <img src="https://i.ibb.co/RhtK9cC/MBXOPWUMBRFULMZVUK25-GULECQ.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Mia Khalifa</h5>
+              <p class="card-text">Gracias Adictos al Código pude crear mi página de cocina estoy muy contenta, sigue así.</p>
+              <a href="#" class="btn btn-primary">Saber más</a>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
